<resources>
    <string name="app_name">Wealthy Habits</string>

    <!-- Menu options -->
    <string name="action_options">Options</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_insert_dummy_data">Insert dummy data</string>

    <!-- Editor -->
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="title_editor_add_transaction">Add Transaction</string>
    <string name="title_editor_add_transfer">New Transfer</string>
    <string name="title_editor_edit">Edit Transaction</string>
    <string name="title_editor_edit_transfer">Edit Transfer</string>

    <string name="editor_insert_trans_failed">Transaction failed!</string>
    <string name="editor_insert_trans_successful">Added successfully!</string>
    <string name="editor_edit_trans_success">Edit entry success!</string>
    <string name="editor_edit_trans_failed">Edit entry error</string>
    <string name="database_no_matches_found">No matches found</string>

    <string name="hint_category">Category</string>
    <string name="hint_amount">Amount</string>
    <string name="transaction_currency">€</string>

    <!-- Label for dropdown menu option [CHAR LIMIT=20] -->
    <string name="type_debit">Debit</string>
    <string name="type_credit">Credit</string>
    <string name="type_transfer">Transfer</string>

    <!-- Label for dropdown Accounts option [CHAR LIMIT=20] -->
    <string name="wallet">Wallet</string>
    <string name="savings">Savings</string>

    <string name="unsaved_changes_dialog_msg">Discard changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="delete_dialog_msg">Delete this transaction?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_trans_successful">Transaction deleted</string>
    <string name="editor_delete_trans_failed">Error with deleting transaction</string>
    <string name="delete_all_dialog_msg">Delete all transactions? \r\n\n (This action cannot be undone)</string>
    <string name="delete_all_transactions">Delete all transactions</string>
    <string name="set_text_no_category">No Category</string>
    <string name="set_text_no_title">No Title</string>
    <string name="set_text_no_amount">0.0</string>
    <string name="hint_enter_date">Enter date</string>
    <string name="main_message">Hail home</string>
    <string name="devil_details">Devilish details</string>
    <string name="category_list">Category List</string>
    <string name="recurring">Recurring</string>
    <string name="expense_kind_want">Want</string>
    <string name="expense_kind_desire">Desire</string>
    <string name="expense_kind_need">Need</string>
    <string name="hint_frequency">Every month</string>
    <string name="hint_enter_end_date">End date</string>
    <string name="recurring_frequency">Recurring frequency</string>



</resources>
